; ModuleID = '/home/carl/AnghaBench/nanomsg/src/utils/extr_chunk.c_nn_chunk_trim.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/utils/extr_chunk.c_nn_chunk_trim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_chunk = type { i64 }

@NN_CHUNK_TAG = common dso_local global i32 0, align 4
@UINT32_MAX = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @nn_chunk_trim(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.nn_chunk*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 16, i64* %6, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = call %struct.nn_chunk* @nn_chunk_getptr(i8* %8)
  store %struct.nn_chunk* %9, %struct.nn_chunk** %5, align 8
  %10 = load i64, i64* %4, align 8
  %11 = load %struct.nn_chunk*, %struct.nn_chunk** %5, align 8
  %12 = getelementptr inbounds %struct.nn_chunk, %struct.nn_chunk* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ule i64 %10, %13
  %15 = zext i1 %14 to i32
  %16 = call i32 @nn_assert(i32 %15)
  %17 = load i8*, i8** %3, align 8
  %18 = bitcast i8* %17 to i32*
  %19 = load i64, i64* %4, align 8
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  %21 = bitcast i32* %20 to i8*
  store i8* %21, i8** %3, align 8
  %22 = load i8*, i8** %3, align 8
  %23 = bitcast i8* %22 to i32*
  %24 = getelementptr inbounds i32, i32* %23, i64 -1
  %25 = load i32, i32* @NN_CHUNK_TAG, align 4
  %26 = call i32 @nn_putl(i32* %24, i32 %25)
  %27 = load i8*, i8** %3, align 8
  %28 = bitcast i8* %27 to i32*
  %29 = load %struct.nn_chunk*, %struct.nn_chunk** %5, align 8
  %30 = bitcast %struct.nn_chunk* %29 to i32*
  %31 = ptrtoint i32* %28 to i64
  %32 = ptrtoint i32* %30 to i64
  %33 = sub i64 %31, %32
  %34 = sdiv exact i64 %33, 4
  %35 = sub i64 %34, 16
  store i64 %35, i64* %7, align 8
  %36 = load i64, i64* %7, align 8
  %37 = load i64, i64* @UINT32_MAX, align 8
  %38 = icmp ult i64 %36, %37
  %39 = zext i1 %38 to i32
  %40 = call i32 @nn_assert(i32 %39)
  %41 = load i8*, i8** %3, align 8
  %42 = bitcast i8* %41 to i32*
  %43 = getelementptr inbounds i32, i32* %42, i64 -2
  %44 = load i64, i64* %7, align 8
  %45 = trunc i64 %44 to i32
  %46 = call i32 @nn_putl(i32* %43, i32 %45)
  %47 = load i64, i64* %4, align 8
  %48 = load %struct.nn_chunk*, %struct.nn_chunk** %5, align 8
  %49 = getelementptr inbounds %struct.nn_chunk, %struct.nn_chunk* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = sub i64 %50, %47
  store i64 %51, i64* %49, align 8
  %52 = load i8*, i8** %3, align 8
  ret i8* %52
}

declare dso_local %struct.nn_chunk* @nn_chunk_getptr(i8*) #1

declare dso_local i32 @nn_assert(i32) #1

declare dso_local i32 @nn_putl(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
